--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4785,7 +4785,7 @@ en:
       add_a_bike: Add a bike
       add_a_lock: Add a lock
       add_a_photo: Add a photo
-      add_some_info: Add some info
+      add_some_info: Next steps
       bikes: bikes
       combination: Combination
       date_abandoned: Date abandoned
