--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -4805,7 +4805,7 @@ nl:
         overige informatie in, om je fiets te registreren bij het meest gebruikte
         fietsregister ter wereld.
 
-'
+        '
       identifying_your_bike: Een gebruiker of partner van Bike Index komt jouw fiets
         tegen, gebruikt Bike Index om de fiets te identificeren en kan dan contact
         met je opnemen.
@@ -4837,7 +4837,6 @@ nl:
       add_a_bike: Voeg een fiets toe
       add_a_lock: Voeg een slot toe
       add_a_photo: Voeg een foto toe
-      add_some_info: Voeg info toe
       bikes: fietsen
       combination: Combinatie
       date_stolen: Datum gestolen
@@ -4867,6 +4866,7 @@ nl:
       you_have_no_registered_locks: U heeft geen geregistreerde sloten
       abandoned: VERLATEN
       date_abandoned: Datum van vermissing
+      next: Voeg info toe
   locales:
     en: English (Engels)
     nl: Nederlands
