--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4234,6 +4234,9 @@ en:
     recovery_display:
       bike: Bike
       recovered_date: recovered %{date}
+    revised_public_image:
+      keep_image_private: keep image private
+      processing: "... processing"
   registrations:
     create:
       in_it_youll_find_instructions: In it, you'll find instructions on how to complete
