rename date_recovered to recovered_at (#1239)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -547,11 +547,11 @@ en:
         slug: Slug
         standard: Standard
       recovery_display:
-        date_recovered: Date recovered
         image: Image
         link: Link
         quote: Quote
         quote_by: Quote by
+        recovered_at: Date recovered
         stolen_record: :activerecord.models.stolen_record
       state:
         abbreviation: Abbreviation
@@ -578,7 +578,6 @@ en:
         creation_organization: :activerecord.models.creation_organization
         current: Current
         current_bike: :activerecord.models.current_bike
-        date_recovered: Date recovered
         date_stolen: Date stolen
         estimated_value: Estimated value
         index_helped_recovery: Index helped recovery
@@ -595,6 +594,7 @@ en:
         police_report_number: Police report number
         proof_of_ownership: Proof of ownership
         receive_notifications: Receive notifications
+        recovered_at: Date recovered
         recovered_description: Recovered description
         recovering_user: :activerecord.models.recovering_user
         recovery_display: :activerecord.models.recovery_display
@@ -3777,11 +3777,11 @@ en:
         sent_to_a_new_owner: sent to a new owner
         sticker: Sticker
       recoveries:
-        date_recovered: Date Recovered
         description: Description
         mfg_model_color_html: manufacturer, model, <span class="less-strong">color</span>
         org_recoveries_html: "<em>%{org_name}</em> Recoveries"
         owner: Owner
+        recovered_at: Date Recovered
         recovery: recovery
       search:
         all: All
