--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1486,13 +1486,11 @@ en:
         welcome_to_bike_index: "* Welcome to Bike Index! *"
     held_bike_email:
       html:
-        found_on: 'Found on:'
-        we_think_your_stolen_bike_html: We think your stolen <strong>%{bike_title}</strong>
-          may have been recovered!
+        check_out_match_here: 'Check out the match here:'
+        we_think_your_stolen_bike_html: We may have found your stolen <strong>%{bike_title}</strong>!
       text:
-        found_on: 'Found on:'
-        we_think_your_stolen_bike: We think your stolen %{bike_title} may have been
-          recovered!
+        check_out_match_here: 'Check out the match here:'
+        we_think_your_stolen_bike: We may have found your stolen %{bike_title}!
     invoice_email:
       html:
         donation_will_help: Your donation of %{amount} really will help us rescue
